# DictDyna

./: .gitignore  Dockerfile  cli.py  docker-compose.yaml  docker_run.sh  pyproject.toml
configs/: base.yaml  pretrain.yaml  train.yaml  transfer.yaml
configs/ablation/: dict_size_k128.yaml  dict_size_k256.yaml  dict_size_k64.yaml  fixed_dict.yaml  independent_dict.yaml  random_dict.yaml  sparsity_sweep.yaml
configs/env/: citylearn_scale.yaml  citylearn_transfer.yaml  sinergym_datacenter.yaml  sinergym_multi.yaml  sinergym_office.yaml  sinergym_transfer.yaml
docs/_dev/: IMPLEMENT.md  PLAN.md  PROJECT.md
scripts/: eval_highdim.py  eval_multistep.py  eval_wm_improvements.py  run_ablation_transfer.py  run_encoder_validation.py  run_gating_experiment.py  run_heterogeneous_transfer.py  run_rbc_baseline.py  run_rollout_ablation.py  run_source_rollout_ablation.py  run_transfer_3seed.py  run_transfer_verify.py  run_unified_experiment.py
scripts/analysis/: _share.py  tier1_actor_f1_f2.py  tier1_climate_check.py  tier1_context_vectors.py  tier1_dict_activations.py  tier1_obs_distribution.py  tier1_reward_surface.py  tier2_bc_thought_experiment.py  tier3_sac_failure_mechanism.py
src/: obs_config.py  obs_config_universal.py  obs_encoder.py  schemas.py  utils.py
src/agent/: __init__.py  _share.py  baseline_sac.py  dyna_sac.py  dyna_trainer.py  (+9 more)
tests/: test_dictionary.py  test_dyna_sac.py  test_episode_boundary.py  test_obs_config.py  test_obs_encoder.py  test_sac.py  test_share.py  test_sinergym_env.py  test_transfer.py  test_universal_trainer.py  test_world_model.py
(+31 files in other folders)
